--- a/index.html
+++ b/index.html
@@ -11,7 +11,19 @@
     <title>Document</title>
 </head>
 <body>
-    <header>
+    <nav class="wrapper scroll">
+        <div class="weapper">
+            <a href=""><img src="./assets/logo.svg" alt=""></a>
+            
+        </div>
+        <svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M10 20H30" stroke="#00856F" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+            <path d="M10 12H30" stroke="#00856F" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+            <path d="M18 28L30 28" stroke="#00856F" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+            </svg>
+        
+    </nav>
+    <header class="wrapper">
     <h4>Boas-Vindas a Doctorcare </h4>
 <h1>Assistência médica simplificada para todos</h1>
 <p>
