--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700&display=swap" rel="stylesheet"> 
     <title>Document</title>
 </head>
-<body>
-    <nav class="scroll">
+<body onscroll="onScroll()">
+    <nav id="navigation" class="scroll">
         <div class="wrapper">
             <a href="#">
                 <svg width="133" height="18" viewBox="0 0 133 18" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -71,5 +71,6 @@
     </div>
 </div>
 </header>
+<script src="main.js"></script>
 </body>
 </html>
