--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700&display=swap" rel="stylesheet"> 
     <title>Document</title>
 </head>
-<body onscroll="onScroll()">
+<body onscroll="onScroll()" class="menu-expanded">
     <nav id="navigation" class="scroll">
         <div class="wrapper">
             <a href="#">
